unpackaged/main/default/objects/ff_frb__FRBSetting__c/ff_frb__FRBSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of FinancialForce Financial Report Builder.</description>
    <label>Financial Report Builder Settings</label>
</CustomObject>