unpackaged/main/default/objects/ff_frb__FRBSetting__c/fields/ff_frb__ExportDefaultLogoFilename__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__ExportDefaultLogoFilename__c</fullName>
    <label>Export Default Logo Filename</label>
    <length>200</length>
    <type>Text</type>
</CustomField>