unpackaged/main/default/objects/ff_frb__FRBSetting__c/fields/ff_frb__ReportColumnLimit__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__ReportColumnLimit__c</fullName>
    <description>You must enter a whole number value between 0 and 99 to define the number of columns displayed in your Financial Report Builder reports.</description>
    <label>Report Column Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>