unpackaged/main/default/objects/ff_frb__FRBSetting__c/fields/ff_frb__ReportRowQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__ReportRowQueryLimit__c</fullName>
    <description>You must enter a whole number value between 0 and 999,999 to define the number of rows displayed in your Financial Report Builder reports. This setting is overridden by any query limits applied in Analytics.</description>
    <label>Report Row Query Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>